[feature] Create secrets for OPDo

--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -3,6 +3,7 @@
   with_items:
   - serving-secrets-{{ inventory_deployment_stage }}.yml
   - s3-secrets-vars.yml
+  - opdo-vars.yml
 
 - name: "SMTP password"
   kubernetes.core.k8s:
@@ -128,3 +129,17 @@
       | eyaml(eyaml_keys) }}
     _search_inside_wp_api_hashed_token: "{{ _search_inside_wp_api_credentials | password_hash_bcrypt(_iv) }}"
     _iv: "Lnkai92hu9u8nNJUkhua82hGFafghjkhi"
+
+- name: Create OPDo Secret
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      type: Opaque
+      metadata:
+        name: opdo-secret
+        namespace: "{{ inventory_namespace }}"
+      stringData:
+        OPDO_URL: "{{ opdo.url }}"
+        OPDO_API_KEY: "{{ opdo.api_key }}"
