[feature] Use OPDo secrets into php container

--- a/ansible/roles/wordpress-namespace/templates/nginx-deployment-spec.yaml
+++ b/ansible/roles/wordpress-namespace/templates/nginx-deployment-spec.yaml
@@ -147,6 +147,9 @@
                   secretKeyRef:
                     name: search-inside-secret
                     key: wp_api_token
+            envFrom:
+              - secretRef:
+                  name: opdo-secret
           - name: php-fpm-exporter
             image: quay-its.epfl.ch/svc0041/php-fpm_exporter:2
             resources:
