--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -142,4 +142,4 @@
         namespace: "{{ inventory_namespace }}"
       stringData:
         OPDO_URL: "{{ opdo.url }}"
-        OPDO_API_KEY: "{{ opdo.api_key }}"
+        OPDO_API_KEY: "{{ opdo.api_key_encoded }}"
