--- a/ansible/roles/wordpress-namespace/vars/opdo-vars.yml
+++ b/ansible/roles/wordpress-namespace/vars/opdo-vars.yml
@@ -2,4 +2,4 @@ _epfl_opdo_secrets: "{{ lookup('pipe', 'keybase fs read /keybase/team/epfl_wp_pr
 
 opdo:
   url: "{{ _epfl_opdo_secrets[inventory_deployment_stage]['url'] }}"
-  api_key: "{{ _epfl_opdo_secrets[inventory_deployment_stage]['api_key'] }}"
+  api_key_encoded: "{{ _epfl_opdo_secrets[inventory_deployment_stage]['encoded'] }}"
