[fix] Rename secret

--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -130,7 +130,7 @@
     _search_inside_wp_api_hashed_token: "{{ _search_inside_wp_api_credentials | password_hash_bcrypt(_iv) }}"
     _iv: "Lnkai92hu9u8nNJUkhua82hGFafghjkhi"
 
-- name: Create OPDo Secret
+- name: OPDo Secret
   kubernetes.core.k8s:
     state: present
     definition:
@@ -138,7 +138,7 @@
       kind: Secret
       type: Opaque
       metadata:
-        name: opdo-secret
+        name: opdo-client
         namespace: "{{ inventory_namespace }}"
       stringData:
         OPDO_URL: "{{ opdo.url }}"
