--- a/ansible/roles/wordpress-namespace/templates/nginx-deployment-spec.yaml
+++ b/ansible/roles/wordpress-namespace/templates/nginx-deployment-spec.yaml
@@ -149,7 +149,7 @@
                     key: wp_api_token
             envFrom:
               - secretRef:
-                  name: opdo-secret
+                  name: opdo-client
           - name: php-fpm-exporter
             image: quay-its.epfl.ch/svc0041/php-fpm_exporter:2
             resources:
