--- a/ansible/roles/wordpress-namespace/vars/opdo-vars.yml
+++ b/ansible/roles/wordpress-namespace/vars/opdo-vars.yml
@@ -3,3 +3,8 @@ _epfl_opdo_secrets: "{{ lookup('pipe', 'keybase fs read /keybase/team/epfl_wp_pr
 opdo:
   url: "{{ _epfl_opdo_secrets[inventory_deployment_stage]['url'] }}"
   api_key_encoded: "{{ _epfl_opdo_secrets[inventory_deployment_stage]['encoded'] }}"
+
+certificate:
+  test: "{{ lookup('pipe', 'keybase fs read /keybase/team/epfl_wp_test/OPDo_test/OPDo_ca_test.crt') }}"
+  production: "{{ lookup('pipe', 'keybase fs read /keybase/team/epfl_wp_prod/OPDo_production/OPDo_ca_production.crt') }}"
+
