--- a/ansible/roles/wordpress-namespace/tasks/mariadb.yml
+++ b/ansible/roles/wordpress-namespace/tasks/mariadb.yml
@@ -3,7 +3,7 @@
     file : "{{ item }}"
   with_items:
     - mariadb-vars.yml
-    - s3-secrets-vars.yml
+    - s3-secrets-{{ inventory_deployment_stage }}.yml
     - ../../../vars/quay-vars.yml
 
 - name: 'MariaDBOperator/mariadb-operator'
