--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -1,9 +1,20 @@
-- tags: always
-  include_vars: "{{ item }}"
-  with_items:
-  - serving-secrets-{{ inventory_deployment_stage }}.yml
-  - s3-secrets-vars.yml
-  - opdo-vars.yml
+- name: opdo_secrets vars
+  tags: always
+  include_vars:
+    file: "opdo-secrets-{{ inventory_deployment_stage }}.yml"
+    name: opdo_secrets
+
+- name: serving_secrets vars
+  tags: always
+  include_vars:
+    file: "serving-secrets-{{ inventory_deployment_stage }}.yml"
+    name: serving_secrets
+
+- name: s3_secrets vars
+  tags: always
+  include_vars:
+    file: "s3-secrets-{{ inventory_deployment_stage }}.yml"
+    name: s3_secrets
 
 - name: "SMTP password"
   kubernetes.core.k8s:
@@ -16,7 +27,7 @@
         name: "smtp-password"
         namespace: "{{ inventory_namespace }}"
       data:
-         SERVICE_WWW_NOREPLY_SMTP_PASSWORD: "{{ smtp.password | eyaml(eyaml_keys) | b64encode }}"
+         SERVICE_WWW_NOREPLY_SMTP_PASSWORD: "{{ serving_secrets.smtp.password | eyaml(serving_secrets.eyaml_keys) | b64encode }}"
   tags: msmtp
 
 - name: EPFL plugin secrets
@@ -30,22 +41,21 @@
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        restauration_api_password: "{{ restauration.api_password | eyaml(eyaml_keys) }}"
-        wpforms_license: "{{ wpforms.license_key | eyaml(eyaml_keys) }}"
+        restauration_api_password: "{{ serving_secrets.restauration.api_password | eyaml(serving_secrets.eyaml_keys) }}"
+        wpforms_license: "{{ serving_secrets.wpforms.license_key | eyaml(serving_secrets.eyaml_keys) }}"
         wpforms_license_json: "{{ _wpforms_license_struct | to_json }}"
-        saferpay_test_apiusername: "{{ saferpay.test.apiusername | eyaml(eyaml_keys) }}"
-        saferpay_test_apipassword: "{{ saferpay.test.apipassword | eyaml(eyaml_keys) }}"
-        saferpay_test_customerid: "{{ saferpay.test.customerid | eyaml(eyaml_keys) | string }}"
-        saferpay_test_terminalid: "{{ saferpay.test.terminalid | eyaml(eyaml_keys) | string }}"
-        saferpay_prod_apiusername: "{{ saferpay.prod.apiusername | eyaml(eyaml_keys) }}"
-        saferpay_prod_apipassword: "{{ saferpay.prod.apipassword | eyaml(eyaml_keys) }}"
-        saferpay_prod_customerid: "{{ saferpay.prod.customerid | eyaml(eyaml_keys) | string }}"
-        saferpay_prod_terminalid: "{{ saferpay.prod.terminalid | eyaml(eyaml_keys) | string }}"
-
+        saferpay_test_apiusername: "{{ serving_secrets.saferpay.test.apiusername | eyaml(serving_secrets.eyaml_keys) }}"
+        saferpay_test_apipassword: "{{ serving_secrets.saferpay.test.apipassword | eyaml(serving_secrets.eyaml_keys) }}"
+        saferpay_test_customerid: "{{ serving_secrets.saferpay.test.customerid | eyaml(serving_secrets.eyaml_keys) | string }}"
+        saferpay_test_terminalid: "{{ serving_secrets.saferpay.test.terminalid | eyaml(serving_secrets.eyaml_keys) | string }}"
+        saferpay_prod_apiusername: "{{ serving_secrets.saferpay.prod.apiusername | eyaml(serving_secrets.eyaml_keys) }}"
+        saferpay_prod_apipassword: "{{ serving_secrets.saferpay.prod.apipassword | eyaml(serving_secrets.eyaml_keys) }}"
+        saferpay_prod_customerid: "{{ serving_secrets.saferpay.prod.customerid | eyaml(serving_secrets.eyaml_keys) | string }}"
+        saferpay_prod_terminalid: "{{ serving_secrets.saferpay.prod.terminalid | eyaml(serving_secrets.eyaml_keys) | string }}"
   vars:
      _wpforms_license_struct:
         type: "elite"
-        key: "{{ wpforms.license_key | eyaml(eyaml_keys) }}"
+        key: "{{ serving_secrets.wpforms.license_key | eyaml(serving_secrets.eyaml_keys) }}"
         is_expired: false
         is_disabled: false
         is_invalid: false
@@ -61,10 +71,12 @@
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        keyId: "{{ s3_backup_credentials.keyId }}"
-        accessSecret: "{{ s3_backup_credentials.accessSecret }}"
+        keyId: "{{ s3_secrets.s3_backup_credentials.keyId | eyaml(s3_secrets.eyaml_keys) }}"
+        accessSecret: "{{ s3_secrets.s3_backup_credentials.accessSecret | eyaml(s3_secrets.eyaml_keys) }}"
 
 - name: MariaDB operator restore credentials (read-only)
+  when: >-
+    inventory_deployment_stage == "test"
   kubernetes.core.k8s:
     definition:
       apiVersion: v1
@@ -74,8 +86,8 @@
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        keyId: "{{ s3_ro_prod_credentials.keyId | eyaml(eyaml_keys) }}"
-        accessSecret: "{{ s3_ro_prod_credentials.accessSecret | eyaml(eyaml_keys) }}"
+        keyId: "{{ s3_secrets.s3_ro_prod_credentials.keyId | eyaml(s3_secrets.eyaml_keys) }}"
+        accessSecret: "{{ s3_secrets.s3_ro_prod_credentials.accessSecret | eyaml(s3_secrets.eyaml_keys) }}"
 
 - name: Check if WordPress authentication secret exists
   kubernetes.core.k8s_info:
@@ -123,10 +135,10 @@
         wp_api_token: "{{ _search_inside_wp_api_hashed_token | b64encode }}"
   vars:
     _search_inside_wp_api_credentials: >-
-      {{ search_inside_scrape.username
+      {{ serving_secrets.search_inside_scrape.username
       }}:{{
-      search_inside_scrape.password
-      | eyaml(eyaml_keys) }}
+      serving_secrets.search_inside_scrape.password
+      | eyaml(serving_secrets.eyaml_keys) }}
     _search_inside_wp_api_hashed_token: "{{ _search_inside_wp_api_credentials | password_hash_bcrypt(_iv) }}"
     _iv: "Lnkai92hu9u8nNJUkhua82hGFafghjkhi"
 
@@ -141,5 +153,5 @@
         name: opdo-client
         namespace: "{{ inventory_namespace }}"
       stringData:
-        OPDO_URL: "{{ opdo.url }}"
-        OPDO_API_KEY: "{{ opdo.api_key_encoded }}"
+        OPDO_URL: "{{ opdo_secrets.opdo.url }}"
+        OPDO_API_KEY: "{{ opdo_secrets.opdo.api_key_encoded | eyaml(opdo_secrets.eyaml_keys) }}"
