[feature] Add a ClusterLogForwarder to collect opdo logs

--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -221,3 +221,12 @@
     - report-uri
     - report-uri.startbuild
     - report-uri.restart
+
+- name: OPDO
+  include_tasks:
+    file: opdo.yml
+    apply:
+      tags:
+        - wp-opdo
+  tags:
+    - wp-opdo
