[feature] Create a Logstash StatefulSet

--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -221,3 +221,16 @@
     - report-uri
     - report-uri.startbuild
     - report-uri.restart
+
+- name: LogStash
+  include_tasks:
+    file: logstash.yml
+    apply:
+      tags:
+        - wp
+        - wp.logstash
+        - logstash
+  tags:
+    - wp
+    - wp.logstash
+    - logstash
