--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -138,8 +138,8 @@
       kind: Secret
       type: Opaque
       metadata:
-        name: opdo-client
+        name: opdo-logstash
         namespace: "{{ inventory_namespace }}"
       stringData:
-        OPDO_URL: "{{ opdo.url }}"
-        OPDO_API_KEY: "{{ opdo.api_key_encoded }}"
+        PIPELINE_OUTPUT_ELASTICSEARCH_HOSTS: "{{ opdo.url | string }}"
+        PIPELINE_OUTPUT_ELASTICSEARCH_API_KEY: "{{ opdo.api_key_encoded }}"
