--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -153,7 +153,7 @@
         name: opdo-logstash
         namespace: "{{ inventory_namespace }}"
       stringData:
-        PIPELINE_OUTPUT_ELASTICSEARCH_HOSTS: "{{ opdo_secrets.opdo.url | string }}"
+        PIPELINE_OUTPUT_ELASTICSEARCH_HOSTS: "{{ opdo_secrets.opdo.urls }}"
         PIPELINE_OUTPUT_ELASTICSEARCH_API_KEY: "{{ _opdo_api_key_encoded }}"
   vars:
     _opdo_api_key_username: "{{ opdo_secrets.opdo.api_key.username | eyaml(opdo_secrets.eyaml_keys) }}"
