--- a/ansible/roles/wordpress-namespace/templates/nginx-deployment-spec.yaml
+++ b/ansible/roles/wordpress-namespace/templates/nginx-deployment-spec.yaml
@@ -141,6 +141,8 @@
                 readOnly: true
               - name: opdo-ca
                 mountPath: /usr/local/share/ca-certificates
+              - name: wordpress-audit
+                mountPath: /wp-audit/
             env:
               - name: SEARCH_INSIDE_WP_API_HASHED_TOKEN
                 valueFrom:
@@ -190,6 +192,9 @@
           - name: opdo-ca
             configMap:
               name: opdo-ca
+          - name: wordpress-audit
+            persistentVolumeClaim:
+              claimName: wordpress-audit
           - name: kube-api-access
             projected:
               defaultMode: 420
