[feature] Have a different size for production namespace

--- a/ansible/roles/wordpress-namespace/tasks/storage.yml
+++ b/ansible/roles/wordpress-namespace/tasks/storage.yml
@@ -83,7 +83,8 @@
           - ReadWriteMany
         resources:
           requests:
-            storage: 1Gi
+            storage: >-
+              {{ "1Gi" if inventory_deployment_stage != "production" else "1Mi" }}
         storageClassName: wordpress-nfs-data
 
 - when:
