[fix] Encrypt username and password and then make base64 encoding

--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -154,4 +154,9 @@
         namespace: "{{ inventory_namespace }}"
       stringData:
         OPDO_URL: "{{ opdo_secrets.opdo.url }}"
-        OPDO_API_KEY: "{{ opdo_secrets.opdo.api_key_encoded | eyaml(opdo_secrets.eyaml_keys) }}"
+        OPDO_API_KEY: "{{ _opdo_api_key_encoded }}"
+  vars:
+    _opdo_api_key_username: "{{ opdo_secrets.opdo.api_key.username | eyaml(opdo_secrets.eyaml_keys) }}"
+    _opdo_api_key_password: "{{ opdo_secrets.opdo.api_key.password | eyaml(opdo_secrets.eyaml_keys) }}"
+    _opdo_api_key_credentials: "{{ _opdo_api_key_username }}:{{ _opdo_api_key_password }}"
+    _opdo_api_key_encoded: "{{ _opdo_api_key_credentials | b64encode }}"
