--- a/ansible/roles/wordpress-namespace/tasks/logstash.yml
+++ b/ansible/roles/wordpress-namespace/tasks/logstash.yml
@@ -10,6 +10,7 @@
       kind: ConfigMap
       metadata:
         name: logstash-opdo-pipeline
+        namespace: "{{ inventory_namespace }}"
       data:
         pipeline.conf: |
           input {
@@ -64,8 +65,8 @@
                     mountPath: /usr/local/share/ca-certificates
                   - name: wordpress-audit
                     mountPath: /wp-audit
-                  - name: logstashconfig
-                    mountPath: /usr/share/logstash/config
+                  - name: logstashpipeline
+                    mountPath: /etc/logstash/conf.d
                 envFrom:
                   - secretRef:
                       name: opdo-logstash
@@ -76,6 +77,6 @@
               - name: opdo-ca
                 configMap:
                   name: opdo-ca
-              - name: logstashconfig
+              - name: logstashpipeline
                 configMap:
                   name: logstash-opdo-pipeline
