--- a/ansible/roles/wordpress-namespace/tasks/logstash.yml
+++ b/ansible/roles/wordpress-namespace/tasks/logstash.yml
@@ -74,7 +74,7 @@
       apiVersion: apps/v1
       kind: StatefulSet
       metadata:
-        name: logstash
+        name: logstash-wordpress
         namespace: "{{ inventory_namespace }}"
       spec:
         selector:
