--- a/ansible/roles/wordpress-namespace/tasks/logstash.yml
+++ b/ansible/roles/wordpress-namespace/tasks/logstash.yml
@@ -9,10 +9,10 @@
       apiVersion: v1
       kind: ConfigMap
       metadata:
-        name: logstash-opdo-pipeline-conf
+        name: logstash-audit-logs-pipeline-conf
         namespace: "{{ inventory_namespace }}"
       data:
-        pipeline.conf: |
+        audit-logs-to-security.conf: |
           input {
             file {
               path => "/wp-audit/*.jsonl"
@@ -53,7 +53,7 @@
       apiVersion: v1
       kind: ConfigMap
       metadata:
-        name: logstash-opdo-pipelines-yml
+        name: logstash-configs-yml
         namespace: "{{ inventory_namespace }}"
       data:
         logstash.yml: |
@@ -64,8 +64,8 @@
           node:
             name: "logstash-opdo"
         pipelines.yml: |
-          - pipeline.id: logstash-opdo
-            path.config: "/etc/logstash/conf.d/pipeline.conf"
+          - pipeline.id: audit-logs-to-security
+            path.config: "/etc/logstash/conf.d/audit-logs-to-security.conf"
 
 - name: StatefulSet/LogStash
   kubernetes.core.k8s:
@@ -98,9 +98,9 @@
                     mountPath: /usr/local/share/ca-certificates
                   - name: wordpress-audit
                     mountPath: /wp-audit
-                  - name: logstash-pipeline-conf
+                  - name: audit-logs-pipeline-conf
                     mountPath: /etc/logstash/conf.d
-                  - name: logstash-pipelines-yml
+                  - name: configs-yml
                     mountPath: /usr/share/logstash/config
                 envFrom:
                   - secretRef:
@@ -119,12 +119,12 @@
               - name: opdo-ca
                 configMap:
                   name: opdo-ca
-              - name: logstash-pipeline-conf
+              - name: audit-logs-pipeline-conf
                 configMap:
-                  name: logstash-opdo-pipeline-conf
-              - name: logstash-pipelines-yml
+                  name: logstash-audit-logs-pipeline-conf
+              - name: configs-yml
                 configMap:
-                  name: logstash-opdo-pipelines-yml
+                  name: logstash-configs-yml
 
 - name: Service/LogStash
   kubernetes.core.k8s:
