[fix] Change host field into agent.name

--- a/ansible/roles/wordpress-namespace/tasks/logstash.yml
+++ b/ansible/roles/wordpress-namespace/tasks/logstash.yml
@@ -28,7 +28,9 @@
               drop { }
             }
             mutate {
-              rename => { "[host][name]" => "hostname" }
+              add_field => {
+                "[agent][name]" => "%{[host][name]}"
+              }
               remove_field => ["host"]
             }
           }
