--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -153,7 +153,9 @@
         name: opdo-logstash
         namespace: "{{ inventory_namespace }}"
       stringData:
-        PIPELINE_OUTPUT_ELASTICSEARCH_HOSTS: "{{ opdo_secrets.opdo.urls }}"
+        PIPELINE_OUTPUT_ELASTICSEARCH_HOST1: "{{ opdo_secrets.opdo.urls[0] }}"
+        PIPELINE_OUTPUT_ELASTICSEARCH_HOST2: "{{ opdo_secrets.opdo.urls[1] }}"
+        PIPELINE_OUTPUT_ELASTICSEARCH_HOST3: "{{ opdo_secrets.opdo.urls[2] | default('') }}"
         PIPELINE_OUTPUT_ELASTICSEARCH_INDEX: "{{ opdo_secrets.opdo.index }}"
         PIPELINE_OUTPUT_ELASTICSEARCH_API_KEY: "{{ _opdo_api_key_encoded }}"
   vars:
