[fix] Fix the missing condition for the "Logstash is up?" alert

--- a/ansible/roles/wordpress-namespace/tasks/monitoring.yml
+++ b/ansible/roles/wordpress-namespace/tasks/monitoring.yml
@@ -231,7 +231,7 @@
             rules:
               - alert: LogstashDown
                 expr: >
-                  up{namespace="{{ inventory_namespace }}",job="logstash"}
+                  up{namespace="{{ inventory_namespace }}",job="logstash"} != 1
                 for: 4m
                 labels:
                   severity: critical
