--- a/ansible/roles/wordpress-namespace/tasks/logstash.yml
+++ b/ansible/roles/wordpress-namespace/tasks/logstash.yml
@@ -95,6 +95,12 @@
             containers:
               - name: logstash
                 image: docker.elastic.co/logstash/logstash:9.2.1
+                resources:
+                  limits:
+                    memory: 800Mi
+                  requests:
+                    cpu: 10m
+                    memory: 512Mi
                 ports:
                   - containerPort: 9600
                     name: monitoring
@@ -113,6 +119,12 @@
 
               - name: logstash-exporter
                 image: quay-its.epfl.ch/svc0041/logstash-exporter-kuskoman:v1.9.1
+                resources:
+                  limits:
+                    memory: 256Mi
+                  requests:
+                    cpu: 5m
+                    memory: 128Mi
                 ports:
                   - containerPort: 9198
                     name: metrics
