[fix] Fix checking the queue for a pipeline on a useless metric. "logstash_stats_pipeline_queue_events_count" stay empty if the server URL is not valid.

--- a/ansible/roles/wordpress-namespace/tasks/monitoring.yml
+++ b/ansible/roles/wordpress-namespace/tasks/monitoring.yml
@@ -244,7 +244,7 @@
                     {%- endraw %}
               - alert: LogstashAuditLogsNotProcessing
                 expr: >
-                  logstash_stats_pipeline_queue_events_count{namespace="{{ inventory_namespace }}",pipeline=~"audit-logs-to-security"} > 0
+                  logstash_stats_pipeline_events_in{namespace="{{ inventory_namespace }}",pipeline=~'audit-logs-to-security'} - logstash_stats_pipeline_events_out{namespace="{{ inventory_namespace }}",pipeline=~'audit-logs-to-security'} > 0
                 for: 4h
                 labels:
                   severity: warning
